# smartdiff

./: README.md  pyproject.toml  smartdiff_nuitka_linux.py  smartdiff_nuitka_macos.py  smartdiff_nuitka_macos_x86.py  smartdiff_nuitka_windows.py
.github/workflows/: smartdiff-nuitka.yml
src/smartdiff/: __init__.py  __main__.py  app.py  app_info.py  app_settings.py  binary_files.py  compare.py  diff_window.py  main_window.py  models.py  scan_rules.py  settings_dialog.py  sync.py  text_file.py  theme.py
