[project]
name = "smartdiff"
version = "0.1.0"
description = "Python + PySide6 diff viewer."
license = { file = "LICENSE" }
authors = [
    { name = "smalinin" }
]
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.scripts]
smartdiff = "smartdiff.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
